# FindMyEPUdatasets

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h  xmllist.txt
